# pyStMoMo

./: .gitignore  404.html  CHANGELOG.md  LICENSE  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: ci.yml  docs.yml  release.yml
api/bootstrap/: index.html
api/data/: index.html
api/diagnostics/: index.html
api/fitting/: index.html
api/forecasting/: index.html
api/models/: index.html
api/plotting/: index.html
api/simulation/: index.html
docs/: index.md
docs/api/: bootstrap.md  data.md  diagnostics.md  external.md  fitting.md  forecasting.md  models.md  plotting.md  simulation.md
docs/theory/: gapc.md  identifiability.md  link_functions.md  uncertainty.md
docs/user_guide/: bootstrap.md  cbd_family.md  external_forecasters.md  forecasting.md  lee_carter.md  quickstart.md  rates_vs_probs.md
examples/: 01_lee_carter_quickstart.ipynb  02_cbd_family_comparison.ipynb  03_bootstrap_intervals.ipynb
search/: search_index.json
src/pystmomo/: __init__.py
src/pystmomo/bootstrap/: __init__.py  boot_result.py  residual_boot.py  semipar_boot.py
src/pystmomo/core/: __init__.py  age_functions.py  constraints.py  design.py  predictor.py  stmomo.py
src/pystmomo/data/: __init__.py  _generate_ew_male.py  _loader.py
src/pystmomo/diagnostics/: __init__.py  crossval.py  residuals.py
src/pystmomo/fit/: __init__.py  bilinear_fit.py  families.py  fit_result.py  glm_fit.py  starting_values.py
src/pystmomo/forecast/: __init__.py  arima_fc.py  external.py  forecast.py  forecast_result.py  mrwd.py
src/pystmomo/models/: __init__.py  apc.py  cbd.py  lc.py  m6.py  m7.py  m8.py  rh.py
src/pystmomo/plot/: __init__.py  _style.py  forecast_plot.py  parameters.py  residual_plot.py
src/pystmomo/simulate/: __init__.py  sim_result.py  (+1 more)
tests/: conftest.py
tests/integration/: test_all_models.py  test_apc.py  test_cbd.py  test_lc.py
tests/unit/: test_age_functions.py  test_external_forecaster.py  test_mrwd.py  test_residuals.py
theory/gapc/: index.html
theory/identifiability/: index.html
theory/link_functions/: index.html
theory/uncertainty/: index.html
user_guide/bootstrap/: index.html
user_guide/cbd_family/: index.html
user_guide/external_forecasters/: index.html
user_guide/forecasting/: index.html
user_guide/lee_carter/: index.html
user_guide/quickstart/: index.html
user_guide/rates_vs_probs/: index.html
(+5 files in other folders)
