[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"

[project]
name = "pystmomo"
description = "Stochastic mortality modelling — Python port of the StMoMo R library"
readme = "README.md"
license = { text = "GPL-2.0-or-later" }
requires-python = ">=3.10"
dynamic = ["version"]
authors = [{ name = "Filipe Duarte", email = "duartfilipe@gmail.com" }]
keywords = ["mortality", "actuarial", "demography", "stochastic", "Lee-Carter", "CBD"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU General Public License v2 or later (GPLv2+)",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Mathematics",
]
dependencies = [
    "numpy>=1.26,<3",
    "scipy>=1.11,<2",
    "pandas>=2.1,<3",
    "statsmodels>=0.14,<1",
    "matplotlib>=3.8,<4",
]

[project.optional-dependencies]
parallel = ["joblib>=1.3"]
docs = [
    "mkdocs>=1.6",
    "mkdocs-material>=9.5",
    "mkdocstrings[python]>=0.25",
    "mkdocs-jupyter>=0.24",
]
dev = [
    "pytest>=8",
    "pytest-cov",
    "hypothesis",
    "ruff>=0.5",
    "mypy>=1.10",
    "pre-commit",
    "nbmake",
    "pystmomo[parallel]",
]
all = ["pystmomo[dev,docs,parallel]"]

[project.urls]
Homepage = "https://github.com/filipeduarte/pyStMoMo"
Documentation = "https://filipeduarte.github.io/pyStMoMo"
Repository = "https://github.com/filipeduarte/pyStMoMo"
Issues = "https://github.com/filipeduarte/pyStMoMo/issues"

[tool.hatch.version]
path = "src/pystmomo/_version.py"

[tool.hatch.build.targets.wheel]
packages = ["src/pystmomo"]

[tool.ruff]
line-length = 100
target-version = "py310"
src = ["src"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "N", "B", "C4", "SIM"]
ignore = ["B008", "N803", "N806"]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"
markers = [
    "slow: tests that are slow (deselect with -m 'not slow')",
    "integration: integration tests against reference R outputs",
]
